--- a/snippets/product-quantity.liquid
+++ b/snippets/product-quantity.liquid
@@ -1,5 +1,5 @@
 <div
-  class="inline-flex text-md font-bold items-center"
+  class="inline-flex gap-3 font-normal items-center"
   x-data="{ 
 		quantity: {% if product.quantity > 1 %} {{ product.quantity }} {% else %} 1 {% endif %},
 		minus(value) {
@@ -13,7 +13,7 @@
 	}"
   x-init="$watch('quantity', value =>  $dispatch('quantity-changed', { quantity: value }))">
   <button
-    class="px-4 py-2 cursor-pointer"
+    class="text-xl bg-white w-10 h-10 text-hover rounded-full shadow-none hover:shadow-md hover:!bg-gray-100 transition active:scale-90"
     type="button"
     @click.debounce="[minus(1){% if cart_page %}, Functions.changeQuantity({{ product_index }}, quantity), loading = true{% endif %}]">
     <span class="sr-only">zmniejsz ilość</span>
@@ -21,13 +21,13 @@
   </button>
   <input
     type="number"
-    class="product__number text-center max-w-[50px] w-full"
+    class="product__number text-center p-0 w-10 border-[#ddd] border rounded-lg bg-gray-100"
     name="quantity"
     min="1"
     onkeydown="return false"
     x-model="quantity" />
   <button
-    class="px-4 py-2 cursor-pointer"
+    class="text-xl bg-white w-10 h-10 text-hover rounded-full shadow-none hover:shadow-md hover:!bg-gray-100 transition active:scale-90"
     type="button"
     @click.debounce="[plus(1){% if cart_page %}, Functions.changeQuantity({{ product_index }}, quantity), loading = true{% endif %}]">
     <span class="sr-only">zwiększ ilość</span>
