--- a/sections/product-description.liquid
+++ b/sections/product-description.liquid
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="grid md:grid-cols-2 md:gap-10 grid-cols-1 gap-5">
+    {% comment %} Product Media {% endcomment %}
     <div>
       {% if product.media.size > 1 %}
         {% render 'product-media-slider' %}
@@ -10,7 +11,8 @@
         {% endfor %}
       {% endif %}
     </div>
-    <div>
+    {% comment %} Product Description {% endcomment %}
+    <div class="flex flex-col gap-4">
       {% for block in section.blocks %}
         {% case block.type %}
 
@@ -18,24 +20,24 @@
             {% render block %}
 
           {% when "vendor" %}
-            <div class="my-3">
+            <div class="">
               <span class="text-xs">
                 {{ product.vendor }}
               </span>
             </div>
 
           {% when 'title' %}
-            <div class="my-3">
+            <div class="">
               <h1 class="text-3xl">{{ product.title }}</h1>
             </div>
 
           {% when 'description' %}
-            <p class="my-3">
+            <p class="">
               {{ product.description }}
             </p>
 
           {% when 'variant_selector' %}
-            <div class="my-3">
+            <div class="">
               {% unless product.has_only_default_variant %}
                 {% render 'product-variant-selector'
                   , product: product %}
@@ -43,7 +45,7 @@
             </div>
 
           {% when 'quantity' %}
-              {% render 'product-quantity' %}
+            {% render 'product-quantity' %}
           {% when 'price' %}
             {% render 'price'
               , product: product %}
