--- a/snippets/product-variant-selector.liquid
+++ b/snippets/product-variant-selector.liquid
@@ -1,3 +1,12 @@
+{%- liquid
+  assign variants_available_arr = product.variants | map: 'available'
+  assign variants_option1_arr = product.variants | map: 'option1'
+  assign variants_option2_arr = product.variants | map: 'option2'
+  assign variants_option3_arr = product.variants | map: 'option3'
+
+  assign product_form_id = 'product-form-' | append: section.id
+-%}
+
 <variant-radios
   class="no-js-hidden flex flex-col gap-4"
   data-section="{{ section.id }}"
@@ -14,34 +23,84 @@
         {% if option.name == 'Pasek' %}
           <select
             id="{{ section.id }}-{{ option.position }}-select"
-            class="product-form__variantSelect"
+            class="product-form__variantSelect variant-select-input"
             name="{{ option.name }}"
             form="{{ product_form_id }}">
-
             {%- for value in option.values -%}
+
+              {%- liquid
+                assign option_disabled = true
+
+                for option1_name in variants_option1_arr
+                  case option.position
+                    when 1
+                      if variants_option1_arr[forloop.index0] == value and variants_available_arr[forloop.index0]
+                        assign option_disabled = false
+                      endif
+                    when 2
+                      if option1_name == product.selected_or_first_available_variant.option1 and variants_option2_arr[forloop.index0] == value and variants_available_arr[forloop.index0]
+                        assign option_disabled = false
+                      endif
+                    when 3
+                      if option1_name == product.selected_or_first_available_variant.option1 and variants_option2_arr[forloop.index0] == product.selected_or_first_available_variant.option2 and variants_option3_arr[forloop.index0] == value and variants_available_arr[forloop.index0]
+                        assign option_disabled = false
+                      endif
+                  endcase
+                endfor
+              -%}
+
               <option
                 value="{{ value | escape }}"
                 {% if option.selected_value == value %}
-                selected{% endif %}>
+                selected{% endif %}
+                {% if option_disabled %}
+                disabled{% endif %}>
                 {{ value }}
+                {% if option_disabled %}
+                  -  Niedostępny
+                {% endif %}
               </option>
             {%- endfor -%}
           </select>
         {% else %}
 
           {%- for value in option.values -%}
-            <div>
-              <input
-                type="radio"
-                id="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}"
-                name="{{ option.name }}"
-                value="{{ value | escape }}"
-                form="{{ product_form_id }}"
-                class="sr-only peer"
-                {% if option.selected_value == value %}
-                checked{% endif %}>
-              <label for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" class=" bg-black block cursor-pointer border rounded-full w-7 h-7 hover:scale-110 hover:brightness-110 hover:shadow-md active:scale-100  transition"></label>
-            </div>
+
+            {%- liquid
+              assign option_disabled = true
+
+              for option1_name in variants_option1_arr
+                case option.position
+                  when 1
+                    if variants_option1_arr[forloop.index0] == value and variants_available_arr[forloop.index0]
+                      assign option_disabled = false
+                    endif
+                  when 2
+                    if option1_name == product.selected_or_first_available_variant.option1 and variants_option2_arr[forloop.index0] == value and variants_available_arr[forloop.index0]
+                      assign option_disabled = false
+                    endif
+                  when 3
+                    if option1_name == product.selected_or_first_available_variant.option1 and variants_option2_arr[forloop.index0] == product.selected_or_first_available_variant.option2 and variants_option3_arr[forloop.index0] == value and variants_available_arr[forloop.index0]
+                      assign option_disabled = false
+                    endif
+                endcase
+              endfor
+            -%}
+            {% unless option_disabled %}
+              <div>
+                <input
+                  type="radio"
+                  id="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}"
+                  name="{{ option.name }}"
+                  value="{{ value | escape }}"
+                  form="{{ product_form_id }}"
+                  class="sr-only peer variant-color-input"
+                  {% if option.selected_value == value %}
+                  checked{% endif %}>
+                <label for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" class=" {{value | downcase}} block cursor-pointer rounded-full w-7 h-7 hover:scale-110 hover:brightness-110 hover:shadow-md active:scale-100  transition"></label>
+              </div>
+            {% endunless %}
+
           {%- endfor -%}
         {% endif %}
       </div>
