--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -38,11 +38,12 @@
       href="{{ settings.favicon | image_url: width: 32, height: 32 }}">
 
     {% render 'meta-tags' %}
-    {{ 'style.css' | asset_url | stylesheet_tag }}
+    {{ 'app.css' | asset_url | stylesheet_tag }}
     <script defer src="{{ 'slider.js' | asset_url }}"></script>
-    <script defer src="{{ 'alpine.js' | asset_url }}"></script>
-    <script defer src="{{ 'global-functions.js' | asset_url }}"></script>
+    <script defer src="{{ 'app.js' | asset_url }}"></script>
 
+
+    <script defer src="{{ 'global-functions.js' | asset_url }}"></script>
     {{ content_for_header }}
   </head>
 
