--- a/assets/app.css
+++ b/assets/app.css
@@ -725,6 +725,15 @@ input[type="number"]::-webkit-outer-spin-button,
 .top-\[58px\] {
   top: 58px;
 }
+.right-full {
+  right: 100%;
+}
+.-right-full {
+  right: -100%;
+}
+.left-full {
+  left: 100%;
+}
 .z-10 {
   z-index: 10;
 }
@@ -1051,6 +1060,10 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .translate-x-0 {
   --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-x-full {
+  --tw-translate-x: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-180 {
