--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -1,6 +1,6 @@
 <div
   x-data="{ 
-		showCartDrawer: false,
+		showCartDrawer: true,
 		loading: false,
 		updateCart(){
 			fetch('/?view=ajax-cart-drawer')
@@ -27,8 +27,14 @@
 
   <div
     x-cloak
-    :class="showCartDrawer ? 'right-0' : '-right-[100vw]'"
-    class="p-5 transition-all z-30 bg-white fixed top-0 md:w-[500px] w-full h-screen shadow-l">
+    x-show="showCartDrawer"
+    x-transition:enter="transition ease-in-out duration-300 transform"
+    x-transition:enter-start="translate-x-full"
+    x-transition:enter-end="translate-x-0"
+    x-transition:leave="transition ease-in-out duration-300 transform"
+    x-transition:leave-start="translate-x-0"
+    x-transition:leave-end="translate-x-full"
+    class="p-5 transition z-30 bg-white fixed top-0 right-0 md:w-[500px] w-full h-screen shadow-l">
     <div class="flex items-center justify-between mb-4">
       <h2 class="text-3xl">Koszyk</h2>
       <span class="cursor-pointer" @click="showCartDrawer = false; document.body.classList.remove('overflow-hidden')">
