--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -1,6 +1,6 @@
 <div
   x-data="{ 
-		showCartDrawer: true,
+		showCartDrawer: false,
 		loading: false,
 		updateCart(){
 			fetch('/?view=ajax-cart-drawer')
