--- a/assets/app.css
+++ b/assets/app.css
@@ -1267,6 +1267,10 @@ input[type="number"]::-webkit-outer-spin-button,
   --tw-border-opacity: 1;
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
 }
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
 .bg-\[\#757575\] {
   --tw-bg-opacity: 1;
   background-color: rgb(117 117 117 / var(--tw-bg-opacity));
@@ -1331,6 +1335,10 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}
+.bg-shof-gray {
+  --tw-bg-opacity: 1;
+  background-color: rgb(198 179 165 / var(--tw-bg-opacity));
 }
 .fill-accent {
   fill: #8baca5;
@@ -1535,6 +1543,9 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+.tracking-\[4px\] {
+  letter-spacing: 4px;
 }
 .text-accent {
   --tw-text-opacity: 1;
@@ -1813,11 +1824,23 @@ input[type="number"]::-webkit-outer-spin-button,
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
+  .sm\:max-w-\[1000px\] {
+    max-width: 1000px;
+  }
+  .sm\:flex-1 {
+    flex: 1 1 0%;
+  }
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+  .sm\:flex-row {
+    flex-direction: row;
+  }
   .sm\:overflow-hidden {
     overflow: hidden;
+  }
+  .sm\:border-r {
+    border-right-width: 1px;
   }
   .sm\:px-6 {
     padding-left: 1.5rem;
@@ -1826,6 +1849,12 @@ input[type="number"]::-webkit-outer-spin-button,
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+  .sm\:text-left {
+    text-align: left;
+  }
+  .last\:sm\:border-none:last-child {
+    border-style: none;
   }
 }
 @media (min-width: 768px) {
