--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,87 +1,43 @@
-<footer>
-	<div class="py-10 container grid md:grid-cols-3 grid-cols-1 text-center md:text-left gap-8">
-		{% if section.settings.logo != blank %}
-			<a href="/">
-				{{ section.settings.logo | image_url: width: 200 | image_tag: loading: 'lazy', class: 'mx-auto md:m-0' }}
-			</a>
-			{% else %}
-				<a href="/">
-					{{ shop.name }}
-				</a>
-		{% endif %}
-		{% for block in section.blocks %}
-			{% case block.type %}
-				{% when 'menu' %}
-					<div>
-						<h3>{{ block.settings.title }}</h3>
-						<ul>
-							{% for link in block.settings.menu.links %}
-								<li class="nav__item">
-									<a class="hover:text-accent" href="{{ link.url }}"> {{ link.title }}</a>
-								</li>
-							{% endfor %}
-						</ul>
-					</div>
-			{% endcase %}
-		{% endfor %}
-	</div>
-	<div class="bg-accent py-3 text-center" style="background-color: {{ section.settings.bg_color }}">
-		<div class="flex justify-center mt-3 mb-3 gap-3">
-			{% for payment in shop.enabled_payment_types %}
-				{{ payment | payment_type_svg_tag }}
-			{% endfor %}
-		</div>
-		<div class="container flex justify-center gap-1" style="color: {{ section.settings.color }}">
-			{{ section.settings.text }} &copy;{{ 'now' | date: '%Y' }}
-		</div>
-	</div>
-</footer>
+<div class="bg-shof-gray tracking-[4px] text-white font-normal relative w-full overflow-hidden mt-10">
+  <div class="flex flex-col sm:flex-row sm:max-w-[1000px] mx-auto">
+    {% for top_item in menus[section.settings.menu].links %}
+      <div class="sm:flex-1 sm:border-r last:sm:border-none border-white">
+        <h3 class="relative footer-h3 font-medium text-xl whitespace-nowrap p-4 text-center border-b border-white">{{ top_item.title }}</h3>
+        <ul class="flex flex-col text-lg gap-2 py-7 px-6 text-center sm:text-left">
+          {% for sub_item in top_item.links %}
+            <li>
+              <a href="{{ sub_item.url }}">{{ sub_item.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+    {% endfor %}
+  </div>
+</div>
+
 {% schema %}
-{
-  "name": "Footer",
-  "settings": [
-    {
-      "type": "image_picker",
-      "id": "logo",
-      "label": "Logo"
-    },
-    {
-      "type": "richtext",
-      "id": "text",
-      "label": "Footer Text",
-      "default": "<p>All Rights Reserved.</p>"
-    },
-    {
-      "type": "color",
-      "id": "bg_color",
-      "label": "Footer Background Color"
-    },
-    {
-      "type": "color",
-      "id": "color",
-      "default": "#ffffff",
-      "label": "Footer Text Color"
-    }
-  ],
-  "blocks": [
-    {
-      "type": "menu",
-      "name": "Footer Menu",
-      "settings": [
-        {
-          "type": "text",
-          "id": "title",
-          "default": "Footer Menu Title",
-          "label": "Title"
-        },
-        {
-          "type": "link_list",
-          "id": "menu",
-          "label": "Footer Menu",
-          "default": "footer"
-        }
-      ]
-    }
-  ]
-}
+  {
+    "name": "Footer Section",
+    "class": "footer-section",
+    "settings": [
+      {
+        "type": "link_list",
+        "id": "menu",
+        "label": "Footer Menu",
+        "default": "footer"
+      }
+    ]
+  }
 {% endschema %}
+
+{% style %}
+  .footer-h3:before {
+    content: '';
+    position: absolute;
+    left: -100%;
+    bottom: -1px;
+    width: 10000%;
+    height: 1px;
+    background-color: white
+  }
+{% endstyle %}
