--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -1,31 +1,67 @@
-<div class="bg-accent py-3 text-center" style="background-color: {{ section.settings.bg_color }}">
-	<div class="container" style="color: {{ section.settings.color }}">
-		{{ section.settings.text }}
-	</div>
-	
-</div>
+{% for block in section.blocks %}
+  <div class="{{ section.settings.text_align }} flex select-none text-xs tracking-[3px] sm:tracking-[10px] sm:text-lg font-normal p-2 text-center" style="background-color: {{ block.settings.bg_color }}; color: {{ block.settings.text_color }}">
+    {{ block.settings.text }}
+  </div>
+{% endfor %}
 
 {% schema %}
-{
-  "name": "Annoncement Bar",
-  "settings": [
-    {
-      "type": "richtext",
-      "id": "text",
-      "label": "Annoncement Bar Text",
-      "default": "<p>Welcome to Doroshev Tailwind/Alpine Shopify custom theme Template</p>"
-    },
-    {
-      "type": "color",
-      "id": "bg_color",
-      "label": "Annoncement Bar Background Color"
-    },
-    {
-      "type": "color",
-      "id": "color",
-      "default": "#ffffff",
-      "label": "Annoncement Bar Text Color"
-    }
-  ]
-}
+  {
+    "name": "Pasek ogłoszeń",
+    "max_blocks": 12,
+    "settings": [
+      {
+        "type": "select",
+        "id": "text_align",
+        "label": "Wyrównanie tekstu",
+        "options": [
+          {
+            "value": "justify-start",
+            "label": "Do lewej"
+          },
+          {
+            "value": "justify-center",
+            "label": "Do środka"
+          },
+          {
+            "value": "justify-end",
+            "label": "Do prawej"
+          }
+        ]
+      }
+    ],
+    "blocks": [
+      {
+        "type": "announcement",
+        "name": "Ogłoszenie",
+        "settings": [
+          {
+            "type": "richtext",
+            "id": "text",
+            "label": "Treść"
+          },
+          {
+            "type": "header",
+            "content": "Wygląd"
+          },
+          {
+            "type": "color",
+            "id": "bg_color",
+            "label": "Kolor tła",
+            "default": "#fff"
+          },
+          {
+            "type": "color",
+            "id": "text_color",
+            "label": "Kolor tekstu",
+            "default": "#000"
+          }
+        ]
+      }
+    ],
+    "presets": [
+      {
+        "name": "Pasek ogłoszeń"
+      }
+    ]
+  }
 {% endschema %}
