--- a/assets/app.css
+++ b/assets/app.css
@@ -722,6 +722,12 @@ input[type="number"]::-webkit-outer-spin-button,
 .top-\[58px\] {
   top: 58px;
 }
+.right-4 {
+  right: 1rem;
+}
+.top-4 {
+  top: 1rem;
+}
 .z-10 {
   z-index: 10;
 }
@@ -890,6 +896,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .aspect-video {
   aspect-ratio: 16 / 9;
 }
+.aspect-\[1\/1\] {
+  aspect-ratio: 1/1;
+}
 .h-10 {
   height: 2.5rem;
 }
@@ -931,6 +940,9 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .h-screen {
   height: 100vh;
+}
+.h-auto {
+  height: auto;
 }
 .max-h-\[70vh\] {
   max-height: 70vh;
@@ -1010,6 +1022,9 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .max-w-sm {
   max-width: 24rem;
+}
+.max-w-3xl {
+  max-width: 48rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1124,6 +1139,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .items-stretch {
   align-items: stretch;
 }
+.justify-start {
+  justify-content: flex-start;
+}
 .justify-end {
   justify-content: flex-end;
 }
@@ -1234,6 +1252,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .rounded-sm {
   border-radius: 0.125rem;
 }
+.rounded-xl {
+  border-radius: 0.75rem;
+}
 .rounded-l-none {
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
@@ -1339,6 +1360,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .bg-shof-gray {
   --tw-bg-opacity: 1;
   background-color: rgb(198 179 165 / var(--tw-bg-opacity));
+}
+.bg-opacity-80 {
+  --tw-bg-opacity: 0.8;
 }
 .fill-accent {
   fill: #8baca5;
@@ -1529,6 +1553,15 @@ input[type="number"]::-webkit-outer-spin-button,
 .font-semibold {
   font-weight: 600;
 }
+.font-extrabold {
+  font-weight: 800;
+}
+.font-extralight {
+  font-weight: 200;
+}
+.font-thin {
+  font-weight: 100;
+}
 .uppercase {
   text-transform: uppercase;
 }
@@ -1546,6 +1579,9 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .tracking-\[4px\] {
   letter-spacing: 4px;
+}
+.tracking-\[3px\] {
+  letter-spacing: 3px;
 }
 .text-accent {
   --tw-text-opacity: 1;
@@ -1853,6 +1889,13 @@ input[type="number"]::-webkit-outer-spin-button,
   .sm\:text-left {
     text-align: left;
   }
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+  .sm\:tracking-\[10px\] {
+    letter-spacing: 10px;
+  }
   .last\:sm\:border-none:last-child {
     border-style: none;
   }
@@ -1936,6 +1979,9 @@ input[type="number"]::-webkit-outer-spin-button,
   }
   .md\:w-full {
     width: 100%;
+  }
+  .md\:w-1\/2 {
+    width: 50%;
   }
   .md\:min-w-\[250px\] {
     min-width: 250px;
