--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,8 +49,7 @@
 
   <body class="text-textColor">
     <div class="w-full min-h-screen flex flex-col">
-      {% section 'announcement-bar' %}
-      {% section 'header' %}
+      {% sections 'header-group' %}
       <main
         role="main"
         class="flex-grow"
