--- a/assets/app.css
+++ b/assets/app.css
@@ -993,6 +993,10 @@ input[type="number"]::-webkit-outer-spin-button,
 .w-screen {
   width: 100vw;
 }
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
 .min-w-\[250px\] {
   min-width: 250px;
 }
@@ -1912,6 +1916,9 @@ input[type="number"]::-webkit-outer-spin-button,
   }
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .sm\:flex-row {
     flex-direction: row;
