--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -34,9 +34,9 @@
   .footer-h3:before {
     content: '';
     position: absolute;
-    left: -100%;
+    left: -9999px;
     bottom: -1px;
-    width: 10000%;
+    width: 99999px;
     height: 1px;
     background-color: white
   }
