--- a/assets/app.css
+++ b/assets/app.css
@@ -684,9 +684,6 @@ input[type="number"]::-webkit-outer-spin-button,
     max-width: 1536px;
   }
 }
-.container {
-    max-width: 1280px;
-  }
 .button {
     box-shadow: var(--shadow-medium);
     cursor: pointer;
@@ -1590,10 +1587,6 @@ input[type="number"]::-webkit-outer-spin-button,
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -1654,6 +1647,10 @@ input[type="number"]::-webkit-outer-spin-button,
   font-size: 3rem;
   line-height: 1;
 }
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1674,9 +1671,8 @@ input[type="number"]::-webkit-outer-spin-button,
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
+.text-\[8vmin\] {
+  font-size: 8vmin;
 }
 .font-bold {
   font-weight: 700;
@@ -1760,6 +1756,10 @@ input[type="number"]::-webkit-outer-spin-button,
   --tw-text-opacity: 1;
   color: rgb(139 172 165 / var(--tw-text-opacity));
 }
+.text-primary {
+  --tw-text-opacity: 1;
+  color: rgb(139 172 165 / var(--tw-text-opacity));
+}
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
@@ -1807,10 +1807,6 @@ input[type="number"]::-webkit-outer-spin-button,
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-primary {
-  --tw-text-opacity: 1;
-  color: rgb(139 172 165 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
@@ -1935,6 +1931,39 @@ input[type="number"]::-webkit-outer-spin-button,
 .g-recaptcha {
   margin-top: 20px;
   margin-bottom: 20px;
+}
+/* Instagram feed styles */
+div[data-block-handle="ig_feed"] {
+  width: 100% !important;
+  margin-right: auto !important;
+  margin-left: auto !important;
+  padding-right: 20px !important;
+  padding-left: 20px !important;
+}
+@media (min-width: 640px) {
+  div[data-block-handle="ig_feed"] {
+    max-width: 640px !important;
+  }
+}
+@media (min-width: 768px) {
+  div[data-block-handle="ig_feed"] {
+    max-width: 768px !important;
+  }
+}
+@media (min-width: 1024px) {
+  div[data-block-handle="ig_feed"] {
+    max-width: 1024px !important;
+  }
+}
+@media (min-width: 1280px) {
+  div[data-block-handle="ig_feed"] {
+    max-width: 1280px !important;
+  }
+}
+@media (min-width: 1536px) {
+  div[data-block-handle="ig_feed"] {
+    max-width: 1536px !important;
+  }
 }
 .placeholder\:text-white\/90::-moz-placeholder {
   color: rgb(255 255 255 / 0.9);
@@ -2098,6 +2127,10 @@ input[type="number"]::-webkit-outer-spin-button,
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+  .sm\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
   .sm\:tracking-\[10px\] {
     letter-spacing: 10px;
