--- a/snippets/collection-filters.liquid
+++ b/snippets/collection-filters.liquid
@@ -1,124 +1,76 @@
-<div>
-	<div class="fitlers relative md:mr-8 mb-2 md:m-0 md:min-w-[250px] md:w-[250px] w-full min-w-full" 
-		x-data="{
-			loading: false,
-		}"
-		@filter-updated.window="$nextTick(() => {
-			const queryString = new URLSearchParams(new FormData($refs.filter_form)).toString()
-			
-			loading = true;
-			fetch('/collections/{{ collection.handle }}?' + queryString)
-				.then(response => response.text())
-				.then(data => {
-					let html_div = document.createElement('div');
-					html_div.innerHTML = data;
-					let html_dom = html_div.querySelector('.ajax-collection').innerHTML;
-					document.querySelector('.ajax-collection').innerHTML = html_dom;
-					// update url without refreshing the page 
-					history.replaceState(null, null, '?' + queryString);
-				})
-				.catch(error => console.error('Error:', error))
-				.finally(() => loading = false);
-			
-		})"
-		>
-			<h4 class="filters__title font-semibold pb-4 border-b">Filters</h4>
+<div class="relative w-full mx-auto overflow-hidden bg-[#eee]">
+  <div x-data="{open: true}" class="container relative cursor-pointer group">
+    <div @click="open = !open" class="absolute left-0 w-full flex justify-between items-center">
+      <button class="p-3">
+        Filtry
+      </button>
+      <svg class="w-4 h-4 duration-200 ease-out" :class="{ 'rotate-180': open }" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
+    </div>
 
-			{% render 'loader' %}
-
-			<form class="filter-form divide-y divide-gray-300" x-ref="filter_form">
-					{%- for filter in collection.filters -%}
-						<details class="filter-group">
-							<summary class="filter-group-summary flex justify-between py-3 cursor-pointer">
-								<div>
-									<span class="font-semibold">{{ filter.label }}</span>
-				
-									{%- if filter.active_values.size > 0 -%}
-										<span class="text-sm ml-2">({{ filter.active_values.size }})</span>
-									{%- endif -%}
-								</div>
-								<span class="arrow-icon">
-										{% render 'icon-arrow-right' %}
-								</span>
-							</summary>
-				
-							<div class="filter-group-display pb-3">
-								<div class="filter-group-display__header flex justify-between items-center">
-									{%- if filter.active_values.size > 0 -%}
-										<span class="filter-group-display__header-selected text-sm">{{ filter.active_values.size }} selected</span>
-										<a href="{{ filter.url_to_remove }}" class="reset-button bg-gray-200 py-1 px-3 text-sm rounded-sm">Reset</a>
-									{%- endif -%}
-								</div>
-				
-								{%- case filter.type -%}
-									{%- when 'boolean' or 'list' -%}
-										<ul class="filter-group-display__list">
-											{%- for filter_value in filter.values -%}
-												<li class="filter-group-display__list-item py-2">
-													<label class="flex items-center" for="Filter-{{ filter.param_name }}-{{ forloop.index }}">
-													<input type="checkbox"
-														class="mr-2 accent-accent"
-														@change="$dispatch('filter-updated')"
-														name="{{ filter_value.param_name }}"
-														value="{{ filter_value.value }}"
-														id="Filter-{{ filter.param_name }}-{{ forloop.index }}"
-														{% if filter_value.active -%}checked{%- endif %}
-														{% if filter_value.count == 0 and filter_value.active == false -%}disabled{%- endif %}
-													>
-													<div class="flex justify-between w-full text-sm">
-														<span class="{% if filter_value.active -%} font-semibold {%- endif %}">{{ filter_value.label }} </span>
-														<span>{{ filter_value.count }}</span>
-													</div>
-												</label>
-												</li>
-											{%- endfor -%}
-										</ul>
-				
-									{%- when 'price_range' -%}
-										<div class="filter-group-display__price-range my-2 flex justify-between space-x-3">
-											<div class="filter-group-display__price-range-from">
-
-												<label for="Filter-{{ filter.min_value.param_name }}" class="block">From</label>
-												<span>{{ cart.currency.symbol }}</span>
-												<input name="{{ filter.min_value.param_name }}"
-													id="Filter-{{ filter.min_value.param_name }}"
-													class="border border-gray-400 rounded-sm p-1 w-full"
-													{% if filter.min_value.value -%}
-														value="{{ filter.min_value.value | money_without_currency }}"
-													{%- endif %}
-													type="number"
-													placeholder="0"
-													min="0"
-													max="{{ filter.range_max | money_without_currency }}"
-												>
-				
-											</div>
-											<div class="filter-group-display__price-range-to">
-												<label for="Filter-{{ filter.max_value.param_name }}" class="block">To</label>
-
-												<span>{{ cart.currency.symbol }}</span>
-												<input name="{{ filter.max_value.param_name }}"
-													id="Filter-{{ filter.max_value.param_name }}"
-													class="border border-gray-400 rounded-sm p-1 w-full"
-													{% if filter.max_value.value -%}
-														value="{{ filter.max_value.value | money_without_currency }}"
-													{%- endif %}
-													type="number"
-													placeholder="{{ filter.range_max | money_without_currency }}"
-													min="0"
-													max="{{ filter.range_max | money_without_currency }}"
-												>
-				
-											</div>
-										</div>
-										  <div class="filter-group-display__submit flex justify-end">
-											<button type="submit" class="bg-black text-white py-1 px-3 text-sm rounded-sm"> Apply </button>
-										</div>
-								{%- endcase -%}
-							</div>
-						</details>
-					{%- endfor -%}  
-			</form>
-				
-	</div>
+    <div x-show="open" x-collapse.min.48px x-cloak>
+      <div x-data="filters" x-initialize="initialize" class="grid grid-cols-4 w-4/6 mx-auto">
+        <div class="col-start-1 p-3">Sortowanie</div>
+        <div class="col-start-2 p-3">Kolorystycznie</div>
+        <div class="col-start-3 p-3">Materiał</div>
+        <div class="col-start-4 p-3">Dostępność</div>
+        <div class="col-start-1 p-3">
+          <template x-for="option in sortOptions" :key="option.value">
+            <div>
+              <input
+                type="checkbox"
+                :value="option.value"
+                x-model="selectedSortOption">
+              <span x-text="option.label"></span>
+            </div>
+          </template>
+        </div>
+        <div class="col-start-2">
+          <template x-for="option in colorOptions" :key="option.value">
+            <div>
+              <input
+                type="checkbox"
+                :value="option.value"
+                x-model="selectedColorOptions">
+              <span x-text="option.label"></span>
+            </div>
+          </template>
+        </div>
+        <div class="col-start-3 flex flex-col gap-2">
+          <template x-for="option in colorOptions" :key="option.value">
+            <div>
+              <input
+                type="checkbox"
+                :value="option.value"
+                x-model="selectedMaterialOptions">
+              <span x-text="option.label"></span>
+            </div>
+          </template>
+          </div>
+        <div class="col-start-4">
+          <div>
+              <input
+                type="checkbox"
+                x-model="isLastOnes">
+              <span>ostatnie sztuki</span>
+            </div>
+            <div class="flex items-start mb-6">
+              <div class="flex items-center h-5">
+                  <input name="custom-checkbox" id="custom-checkbox" type="checkbox" class="hidden peer" required>
+                  <label for="custom-checkbox" class="peer-checked:[&_svg]:scale-100 text-sm font-medium text-neutral-600 peer-checked:text-primary [&_svg]:scale-0 peer-checked:[&_.custom-checkbox]:border-primary peer-checked:[&_.custom-checkbox]:bg-primary select-none flex items-center space-x-2">
+                      <span class="flex items-center justify-center w-5 h-5 border-2 rounded custom-checkbox text-neutral-900">
+                          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor" class="w-3 h-3 text-white duration-300 ease-out">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" />
+                        </svg>
+                      </span>
+                      <span>Ostatnie sztuki</span>
+                  </label>
+              </div>
+            </div>
+        
+        </div>
+        
+        <button @click="submitFilters()">Filtruj</button>
+      </div>
+    </div>
+  </div>
 </div>
